--- a/app/js/views/templates/datepicker.html
+++ b/app/js/views/templates/datepicker.html
@@ -1,1 +1,3 @@
-<input type="text">
+<label class="control-label"><%= lable %></label>
+<input class="form-control">
+<span class="help-block error-message">HELP!</span>
