--- a/app/js/views/templates/dateTimePicker.html
+++ b/app/js/views/templates/dateTimePicker.html
@@ -1,3 +1,3 @@
 <label class="control-label"><%= lable %></label>
 <input class="form-control">
-<span class="help-block error-message">HELP!</span>
+<span class="help-block error-message" />
